Added new Campground input

--- a/v1/views/campgrounds.ejs
+++ b/v1/views/campgrounds.ejs
@@ -1,7 +1,13 @@
+<% include partials/header %>
+
 <h1>This is the campggrounds page!</h1>
+
+<a href="/campgrounds/new">Add New Campground</a>
 <% campgrounds.forEach(function(campground) { %>
         <div>
         <h4><%= campground.name %></h4>
         <img src="<%= campground.image %>">
         </div>
 <% }); %>
+
+<% include partials/footer %>
