--- a/v1/views/partials/header.ejs
+++ b/v1/views/partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>YelpCamp</title>
-        <link rel="stylesheet href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     </head>
     <body>
         
