Added comments route

--- a/v2/views/campgrounds/new.ejs
+++ b/v2/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
   <h1 style="text-align: center;">Create a New Campground</h1>
   <div style="width: 30%; margin: 15px auto;">
@@ -20,4 +20,4 @@
  </div>
 </div>
 </div>
-<% include partials/footer %>
+<% include ../partials/footer %>
